# depa

./: CMakeLists.txt  LICENSE  README.md
header/: adaptiveShiftIndex.hpp  adaptiveShiftIndex2.hpp  common.h  constants.h
resource/ittnotify/tmp/: ittnotify-cfgcmd.txt
resource/regions-sort/RadixSort/: parallel.h
src/benchmark/: constants.h  derapa.cpp
test/: adaptiveShiftIndex_test.cpp  constants.h
